--- a/forms.html
+++ b/forms.html
@@ -23,10 +23,10 @@
 		 <a class="navbar-brand"><img src="fire.png" width="30%"></a>
 		
 		<ul class="navbar-nav">
-			<li class="nav-item"><a href="#" class="nav-link" style="color: #ffbf8c">Home</a></li>
-			<li class="nav-item"><a href="#" class="nav-link" style="color: #ffbf8c">About Us</a></li>
-			<li class="nav-item"><a href="#" class="nav-link" style="color: #ffbf8c">Contact Us</a></li>
-			<li class="nav-item"><a href="#" class="nav-link" style="color: #ffbf8c">Source</a></li>
+			<li class="nav-item"><a href="https://klayrify.github.io/FV_ICT9S_Project_Balila/FV_ICT9S_Project_Balila.html" class="nav-link" style="color: #ffbf8c">Home</a></li>
+			<li class="nav-item"><a href="http://prri.da.gov.ph/fire-prevention-month/" class="nav-link" style="color: #ffbf8c">About Us</a></li>
+			<li class="nav-item"><a href="https://klayrify.github.io/FV_ICT9S_Project_Balila/forms.html" class="nav-link" style="color: #ffbf8c">Contact Us</a></li>
+			<li class="nav-item"><a href="https://www.mapfre.com.mt/blog/home/tips-to-prevent-fires/" class="nav-link" style="color: #ffbf8c">Source</a></li>
 		</ul>
  		<a class="navbar-brand"> ‎ ‎ ‎ ‎   ‎ ‎ ‎ ‎   ‎ ‎ ‎ </a>
  		<h1 class="display-4 text-light" style="color: #ff794d"> Ways To Prevent Fire in your Home</h1>
